--- a/style.css
+++ b/style.css
@@ -181,6 +181,36 @@ p {
   .section2 .img_introhome2 .h2_p_btnContainer2 h2, .section2 .img_introhome2 .h2_p_btnContainer2 p {
     text-align: start !important;
   }
+
+  .section3 .cardParent {
+    grid-template-columns: auto auto;
+  }
+  .section3 .seeMore {
+    display: flex;
+    justify-content: center;
+    padding-top: 3rem;
+  }
+  .section3 .seeMore a button {
+    background-color: hsl(36deg, 96%, 37%);
+    color: white;
+    border: none;
+    font-size: 0.7rem;
+    font-weight: 600;
+    padding: 1.5rem 2.5rem;
+    border-radius: 3px;
+    transition: 0.4s ease;
+    cursor: pointer;
+  }
+  .section3 .seeMore a button:hover {
+    background-color: transparent;
+    border: 1px solid hsl(36deg, 96%, 37%);
+    color: hsl(36deg, 96%, 37%);
+  }
+}
+@media (min-width: 1000px) {
+  .section3 .cardParent {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 @media (min-width: 1440px) {
   .btnContainer button {
@@ -364,6 +394,11 @@ header .progress-container .progress-bar {
   margin: 0 auto;
   border-radius: 9px 9px 9px 9px;
   padding-bottom: 2rem;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: 0.4s ease-in-out;
+}
+.section3 .cardParent .card:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .section3 .cardParent .card .homePicture {
   text-align: center;
