--- a/style/layouts/_section.scss
+++ b/style/layouts/_section.scss
@@ -56,6 +56,12 @@
             margin: 0 auto;
             border-radius: 9px 9px 9px 9px;
             padding-bottom: 2rem;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            transition: .4s ease-in-out;
+            &:hover{
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, 
+                            rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+            }
             .homePicture{
                 text-align: center;
                 img{
