--- a/media/_media.scss
+++ b/media/_media.scss
@@ -33,6 +33,14 @@
     .btns {
         padding-bottom: 20px !important;
     }
+    .dropdown-cont{
+        position: absolute;
+        right: 30%;
+        top: -17%;
+    }
+    .drop-down{
+        position: relative;
+    }
 
     .header-right {
         display: none;
