--- a/style.css
+++ b/style.css
@@ -191,6 +191,16 @@ header {
     padding-bottom: 20px !important;
   }
 
+  .dropdown-cont {
+    position: absolute;
+    right: 30%;
+    top: -17%;
+  }
+
+  .drop-down {
+    position: relative;
+  }
+
   .header-right {
     display: none;
   }
