--- a/password/index.css
+++ b/password/index.css
@@ -5,5 +5,71 @@
     list-style-type: none;
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
-   
+}
+body{
+    background-image: url(/password/image1/Forgot\ Password.svg);
+    width:100%;
+    height:100%;
+}
+h4{
+    text-align: center;
+}
+main{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100vh;
+}
+.form-section{
+  display: flex;  
+  flex-direction: column;
+  background-color: #ffffff;
+  width: 350px;
+height: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 8px;
+  position: relative;
+  top: 8%;
+  
+  
+}
+label{
+    font-weight: 500;
+    color: #101030;
+}
+input {
+   /* display: block; */
+    width: 100%;
+    margin-top: 5px;
+    padding: 12px;
+    border-radius: 6px;
+    outline: none;
+    color: #101010;
+}
+button{
+    width: 100%;
+    margin-top: 5px;
+    padding: 12px;
+    border-radius: 6px;
+    outline: none;
+    color: #ffffff;
+    background-color: 
+    #190E2C;
+    cursor: pointer;
+    
+
+}
+
+button:hover{
+    color: #190E2C;
+    background-color: #ffffff;
+}
+#form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: relative;
+    top: 15%;
+    gap: 20px;
 }
