--- a/section/_section.scss
+++ b/section/_section.scss
@@ -181,6 +181,11 @@ h3 {
     text-align: center;
     padding-bottom: 5rem;
 }
+.section-2{
+    position: relative;
+  animation: mymove 2s infinite;
+    // transition: all 2s ease;
+}
 
 .images-reps {
     display: flex;
@@ -230,5 +235,26 @@ h3 {
 .adam > .adam-img{
     width: 24.5rem;
 }
+.btn1{
+    animation: mymove1 2s ;
+}
+.btn2{
+    animation: mymove2 2s ;
+}
 
 
+@keyframes mymove {
+    from {right: 0px;}
+    to {right: 20px;}
+  }
+@keyframes mymove1 {
+    0%   {top: 0px; background: #777; width: 190px;}
+    100% {top: 200px; background: #101030; width: 130px;}
+  }
+@keyframes mymove2 {
+    // 0%   {top: 0px; left: 0px; background: red;}
+    25%  {top: 0px; color: #fff; left: 100px; background: #000;}
+    50%  {top: 100px; left: 100px; background: #fff;}
+    75%  {top: 100px; left: 0px; background: #F2F2F2;}
+    100% {top: 0px; left: 0px; background: #EEEEF2;}
+  }
