--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 header {
   background-color: #fef5f1;
   padding: 0.8rem;
+  position: fixed;
+  width: 100%;
+  position: relative;
 }
 
 .header-toggle {
@@ -28,6 +31,10 @@ header {
   overflow-y: scroll;
   transform: translateX(100%);
   transition: transform 0.5s cubic-bezier(0.5, 0, 0, 0.75);
+}
+
+.none {
+  right: 0% !important;
 }
 
 .blur_overlay {
@@ -81,6 +88,19 @@ header {
 
 .toggle-bar {
   display: none;
+}
+
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+  transform: translateY(280%);
+}
+.progress-container .progress-bar {
+  height: 8px;
+  background: #3B2F4C;
+  width: 0%;
+  z-index: 100;
 }
 
 .navbar-cont {
@@ -145,6 +165,7 @@ header {
 
 .drop-down:hover .dropdown-cont {
   display: block;
+  z-index: 999;
 }
 
 .drop-content {
@@ -551,6 +572,12 @@ h3 {
   padding-bottom: 5rem;
 }
 
+.section-2 {
+  position: relative;
+  -webkit-animation: mymove 2s infinite;
+          animation: mymove 2s infinite;
+}
+
 .images-reps {
   display: flex;
   flex-direction: row;
@@ -602,6 +629,103 @@ h3 {
   width: 24.5rem;
 }
 
+.btn1 {
+  -webkit-animation: mymove1 2s;
+          animation: mymove1 2s;
+}
+
+.btn2 {
+  -webkit-animation: mymove2 2s;
+          animation: mymove2 2s;
+}
+
+@-webkit-keyframes mymove {
+  from {
+    right: 0px;
+  }
+  to {
+    right: 20px;
+  }
+}
+
+@keyframes mymove {
+  from {
+    right: 0px;
+  }
+  to {
+    right: 20px;
+  }
+}
+@-webkit-keyframes mymove1 {
+  0% {
+    top: 0px;
+    background: #777;
+    width: 190px;
+  }
+  100% {
+    top: 200px;
+    background: #101030;
+    width: 130px;
+  }
+}
+@keyframes mymove1 {
+  0% {
+    top: 0px;
+    background: #777;
+    width: 190px;
+  }
+  100% {
+    top: 200px;
+    background: #101030;
+    width: 130px;
+  }
+}
+@-webkit-keyframes mymove2 {
+  25% {
+    top: 0px;
+    color: #fff;
+    left: 100px;
+    background: #000;
+  }
+  50% {
+    top: 100px;
+    left: 100px;
+    background: #fff;
+  }
+  75% {
+    top: 100px;
+    left: 0px;
+    background: #F2F2F2;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    background: #EEEEF2;
+  }
+}
+@keyframes mymove2 {
+  25% {
+    top: 0px;
+    color: #fff;
+    left: 100px;
+    background: #000;
+  }
+  50% {
+    top: 100px;
+    left: 100px;
+    background: #fff;
+  }
+  75% {
+    top: 100px;
+    left: 0px;
+    background: #F2F2F2;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    background: #EEEEF2;
+  }
+}
 .footer-sect {
   display: flex;
   flex-direction: row;
