--- a/style/abstracts/_variables.scss
+++ b/style/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 // fontfamily
 $raleway:'Raleway', sans-serif;
+$dmSans:'DM Sans', sans-serif;
 
 // backgroundcolors
 $headerBg:hsla(21, 81%, 96%, 1);
