--- a/style/base/_reset.scss
+++ b/style/base/_reset.scss
@@ -5,4 +5,6 @@
     list-style-type: none;
     font-size: 16px;
     font-family: $raleway;
+    // overflow-x: hidden !important;
+    overflow-y: hidden;
 }
