--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
 @import "./style/base/button";
 @import "./style/base/reset";
 @import "./style/base/typography";
+@import "./style/base/cursor";
 
 @import "./style/components/media";
 
