--- a/style/layouts/_section.scss
+++ b/style/layouts/_section.scss
@@ -159,6 +159,30 @@
             }
         }
     }
+    .seeMore{
+        // text-align: center;
+        display: flex;
+        justify-content: center;
+        padding-top: 3rem;
+        a{
+            button{
+                background-color: $btn2;
+                color: white;
+                border: none;
+                font-size: .7rem;
+                font-weight: 600;
+                padding: 1.5rem 2.5rem;
+                border-radius: 3px;
+                transition: .4s ease;
+                cursor: pointer;
+                &:hover{
+                    background-color: transparent;
+                    border: 1px solid $btn2;
+                    color: $btn2;
+                }
+            }
+        }
+    }
 }
 
 
