--- a/forgotPassword/forgotpassword.css
+++ b/forgotPassword/forgotpassword.css
@@ -1,16 +1,19 @@
 body{
+    font-size: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background-image: url(/Corpers-Lodge/forgotPassword/imgs/Forgot\ Passwordbackground.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: 'DM Sans', sans-serif;
     overflow: hidden;
 }
 .parentContainer{
     background-color: white;
-    width: 90%;
-    padding: 10vh 5vw;
+    /* width: 90%; */
+    padding: 20vh 5vw;
     border-radius: 5px;
 }
 h3{
@@ -23,25 +26,28 @@ h3{
     width: 90%;
     margin: 0 auto;
     text-align: center;
-    padding-top: 5rem;
+    padding-bottom: .5rem;
 }
 p{
     font-size: smaller;
     color: hsla(262, 52%, 11%, 1);
     text-align: center;
+    width: 65%;
+    margin: 0 auto;
 }
 #form{
     position: relative;
 }
 #form #email{
     /* max-width: 100%; */
-    width: -webkit-fill-available;;
+    width: -webkit-fill-available;
     background: white;
     outline: none;
     border: 1px solid hsla(262, 52%, 11%, 1);
     padding: 0.8rem;
     border-radius: 0.4rem;
     color:hsla(0, 0%, 54%, 1);
+    margin-top: .5rem;
     /* font-size: 1.2rem; */
 }
 #form #inputBox{
@@ -75,4 +81,23 @@ p{
     font-weight: 300;
     font-style: italic;
     padding: 0.3rem;
+}
+.btn_container{
+    padding-top: 1rem;
+}
+button{
+    width: -webkit-fill-available;
+    padding: .8rem;
+    border-radius: .3rem;
+    border: none;
+    background-color: hsla(262, 52%, 11%, 1);
+    color: white;
+}
+#form p{
+    text-align: start;
+    width: 100%;
+    padding-top: .5rem;
+}
+a{
+    color: hsla(262, 52%, 11%, 1);
 }
