--- a/forgotPassword/pcs.css
+++ b/forgotPassword/pcs.css
@@ -15,15 +15,17 @@ body{
 
 section{
     background-color: white;
-    border-radius: 20px;
+    border-radius: 10px;
     /* padding: 0 90px; */
-    padding-bottom: 70px;
+    padding-bottom: 4.5rem;
+    padding-top: 4.5rem;
     /* max-width: 90%; */
     margin: 0 auto;
     /* width: 75%; */
 }
-p{
+.pcs{
     font-size: 2rem;
+    font-weight: 600;
     color: hsla(262, 52%, 11%, 1);
     line-height: 1.5;
     text-align: center;
@@ -32,10 +34,20 @@ p{
     max-width: 90%;
     margin: 0 auto;
 }
-a{
-    font-size: 1.9rem;
+.click{
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 500;
     color: hsla(262, 52%, 11%, 1);
-    text-underline-offset: 5px;
+}
+a{
+    cursor: pointer;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: hsla(262, 52%, 11%, 1);
+}
+a:hover{
+    text-underline-offset: 4px;
 }
 div{
     text-align: center;
