--- a/password/style.scss/style.css
+++ b/password/style.scss/style.css
@@ -1,12 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style-type: none;
-  text-decoration: none;
-  font-family: "Raleway", sans-serif;
-}
-
 header {
   background-color: #fef5f1;
   padding: 0.8rem;
@@ -126,10 +117,13 @@ header {
 }
 
 .sign-btn {
-  color: white;
-  background-color: #190E2C;
+  color: #190E2C;
+  background-color: none;
   padding: 10px;
   border-radius: 6px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .sign-btn:hover {
   color: black;
@@ -141,7 +135,7 @@ header {
 .header-right > ul {
   display: flex;
   flex-direction: row;
-  gap: 30px;
+  gap: 40px;
   margin-top: auto;
   margin-bottom: auto;
   align-items: center;
@@ -876,4 +870,13 @@ footer {
 
 .drop-cont.is--active {
   transform: translateX(0);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
 }/*# sourceMappingURL=style.css.map */
