--- a/forgotPassword/forgotpassword.css
+++ b/forgotPassword/forgotpassword.css
@@ -86,6 +86,7 @@ p{
     padding-top: 1rem;
 }
 button{
+    cursor: pointer;
     width: -webkit-fill-available;
     padding: .8rem;
     border-radius: .3rem;
