--- a/style/layouts/_footer.scss
+++ b/style/layouts/_footer.scss
@@ -46,7 +46,7 @@ footer{
             padding-top: 1.5rem;
             .smImageContainer{
                 column-gap: 1rem !important;
-                display: flex;
+                display: flex !important;
                 img{
                     cursor: pointer;
                     width: 80%;
